_build/default/src/lib/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On program shift to state 108
-- On exp shift to state 109

State 1:
exp -> WHILE . exp DO exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 105

State 2:
exp -> STRING . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> STRING 
-- On TYPE reduce production exp -> STRING 
-- On TIMES reduce production exp -> STRING 
-- On THEN reduce production exp -> STRING 
-- On SEMI reduce production exp -> STRING 
-- On RPAREN reduce production exp -> STRING 
-- On POW reduce production exp -> STRING 
-- On PLUS reduce production exp -> STRING 
-- On OR reduce production exp -> STRING 
-- On NE reduce production exp -> STRING 
-- On MOD reduce production exp -> STRING 
-- On MINUS reduce production exp -> STRING 
-- On LT reduce production exp -> STRING 
-- On LE reduce production exp -> STRING 
-- On IN reduce production exp -> STRING 
-- On GT reduce production exp -> STRING 
-- On GE reduce production exp -> STRING 
-- On FUNCTION reduce production exp -> STRING 
-- On EQ reduce production exp -> STRING 
-- On EOF reduce production exp -> STRING 
-- On END reduce production exp -> STRING 
-- On ELSE reduce production exp -> STRING 
-- On DO reduce production exp -> STRING 
-- On DIV reduce production exp -> STRING 
-- On COMMA reduce production exp -> STRING 
-- On AND reduce production exp -> STRING 

State 3:
exp -> REAL . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> REAL 
-- On TYPE reduce production exp -> REAL 
-- On TIMES reduce production exp -> REAL 
-- On THEN reduce production exp -> REAL 
-- On SEMI reduce production exp -> REAL 
-- On RPAREN reduce production exp -> REAL 
-- On POW reduce production exp -> REAL 
-- On PLUS reduce production exp -> REAL 
-- On OR reduce production exp -> REAL 
-- On NE reduce production exp -> REAL 
-- On MOD reduce production exp -> REAL 
-- On MINUS reduce production exp -> REAL 
-- On LT reduce production exp -> REAL 
-- On LE reduce production exp -> REAL 
-- On IN reduce production exp -> REAL 
-- On GT reduce production exp -> REAL 
-- On GE reduce production exp -> REAL 
-- On FUNCTION reduce production exp -> REAL 
-- On EQ reduce production exp -> REAL 
-- On EOF reduce production exp -> REAL 
-- On END reduce production exp -> REAL 
-- On ELSE reduce production exp -> REAL 
-- On DO reduce production exp -> REAL 
-- On DIV reduce production exp -> REAL 
-- On COMMA reduce production exp -> REAL 
-- On AND reduce production exp -> REAL 

State 4:
exp -> LPAREN . loption(separated_nonempty_list(SEMI,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On separated_nonempty_list(SEMI,exp) shift to state 99
-- On loption(separated_nonempty_list(SEMI,exp)) shift to state 100
-- On exp shift to state 102
-- On RPAREN reduce production loption(separated_nonempty_list(SEMI,exp)) -> 

State 5:
exp -> LOGIC . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> LOGIC 
-- On TYPE reduce production exp -> LOGIC 
-- On TIMES reduce production exp -> LOGIC 
-- On THEN reduce production exp -> LOGIC 
-- On SEMI reduce production exp -> LOGIC 
-- On RPAREN reduce production exp -> LOGIC 
-- On POW reduce production exp -> LOGIC 
-- On PLUS reduce production exp -> LOGIC 
-- On OR reduce production exp -> LOGIC 
-- On NE reduce production exp -> LOGIC 
-- On MOD reduce production exp -> LOGIC 
-- On MINUS reduce production exp -> LOGIC 
-- On LT reduce production exp -> LOGIC 
-- On LE reduce production exp -> LOGIC 
-- On IN reduce production exp -> LOGIC 
-- On GT reduce production exp -> LOGIC 
-- On GE reduce production exp -> LOGIC 
-- On FUNCTION reduce production exp -> LOGIC 
-- On EQ reduce production exp -> LOGIC 
-- On EOF reduce production exp -> LOGIC 
-- On END reduce production exp -> LOGIC 
-- On ELSE reduce production exp -> LOGIC 
-- On DO reduce production exp -> LOGIC 
-- On DIV reduce production exp -> LOGIC 
-- On COMMA reduce production exp -> LOGIC 
-- On AND reduce production exp -> LOGIC 

State 6:
exp -> LET . decs IN exp END [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR shift to state 7
-- On TYPE shift to state 62
-- On FUNCTION shift to state 67
-- On vardec shift to state 85
-- On typedec shift to state 86
-- On nonempty_list(typedec) shift to state 88
-- On nonempty_list(funcdec) shift to state 89
-- On list(dec) shift to state 90
-- On funcdec shift to state 91
-- On decs shift to state 93
-- On dec shift to state 97
-- On IN reduce production list(dec) -> 

State 7:
vardec -> VAR . ID COLON ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
vardec -> VAR . ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ID shift to state 8

State 8:
vardec -> VAR ID . COLON ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID . ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On COLON shift to state 9
-- On ASSIGN shift to state 60

State 9:
vardec -> VAR ID COLON . ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ID shift to state 10

State 10:
vardec -> VAR ID COLON ID . ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ASSIGN shift to state 11

State 11:
vardec -> VAR ID COLON ID ASSIGN . exp [ VAR TYPE IN FUNCTION ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 59

State 12:
exp -> INTEGER . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> INTEGER 
-- On TYPE reduce production exp -> INTEGER 
-- On TIMES reduce production exp -> INTEGER 
-- On THEN reduce production exp -> INTEGER 
-- On SEMI reduce production exp -> INTEGER 
-- On RPAREN reduce production exp -> INTEGER 
-- On POW reduce production exp -> INTEGER 
-- On PLUS reduce production exp -> INTEGER 
-- On OR reduce production exp -> INTEGER 
-- On NE reduce production exp -> INTEGER 
-- On MOD reduce production exp -> INTEGER 
-- On MINUS reduce production exp -> INTEGER 
-- On LT reduce production exp -> INTEGER 
-- On LE reduce production exp -> INTEGER 
-- On IN reduce production exp -> INTEGER 
-- On GT reduce production exp -> INTEGER 
-- On GE reduce production exp -> INTEGER 
-- On FUNCTION reduce production exp -> INTEGER 
-- On EQ reduce production exp -> INTEGER 
-- On EOF reduce production exp -> INTEGER 
-- On END reduce production exp -> INTEGER 
-- On ELSE reduce production exp -> INTEGER 
-- On DO reduce production exp -> INTEGER 
-- On DIV reduce production exp -> INTEGER 
-- On COMMA reduce production exp -> INTEGER 
-- On AND reduce production exp -> INTEGER 

State 13:
exp -> IF . exp THEN exp ELSE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> IF . exp THEN exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 54

State 14:
exp -> ID . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
var -> ID . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA ASSIGN AND ]
-- On LPAREN shift to state 15
-- On VAR reduce production var -> ID 
-- On TYPE reduce production var -> ID 
-- On TIMES reduce production var -> ID 
-- On THEN reduce production var -> ID 
-- On SEMI reduce production var -> ID 
-- On RPAREN reduce production var -> ID 
-- On POW reduce production var -> ID 
-- On PLUS reduce production var -> ID 
-- On OR reduce production var -> ID 
-- On NE reduce production var -> ID 
-- On MOD reduce production var -> ID 
-- On MINUS reduce production var -> ID 
-- On LT reduce production var -> ID 
-- On LE reduce production var -> ID 
-- On IN reduce production var -> ID 
-- On GT reduce production var -> ID 
-- On GE reduce production var -> ID 
-- On FUNCTION reduce production var -> ID 
-- On EQ reduce production var -> ID 
-- On EOF reduce production var -> ID 
-- On END reduce production var -> ID 
-- On ELSE reduce production var -> ID 
-- On DO reduce production var -> ID 
-- On DIV reduce production var -> ID 
-- On COMMA reduce production var -> ID 
-- On ASSIGN reduce production var -> ID 
-- On AND reduce production var -> ID 

State 15:
exp -> ID LPAREN . loption(separated_nonempty_list(COMMA,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On separated_nonempty_list(COMMA,exp) shift to state 48
-- On loption(separated_nonempty_list(COMMA,exp)) shift to state 49
-- On exp shift to state 51
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,exp)) -> 

State 16:
exp -> BREAK . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> BREAK 
-- On TYPE reduce production exp -> BREAK 
-- On TIMES reduce production exp -> BREAK 
-- On THEN reduce production exp -> BREAK 
-- On SEMI reduce production exp -> BREAK 
-- On RPAREN reduce production exp -> BREAK 
-- On POW reduce production exp -> BREAK 
-- On PLUS reduce production exp -> BREAK 
-- On OR reduce production exp -> BREAK 
-- On NE reduce production exp -> BREAK 
-- On MOD reduce production exp -> BREAK 
-- On MINUS reduce production exp -> BREAK 
-- On LT reduce production exp -> BREAK 
-- On LE reduce production exp -> BREAK 
-- On IN reduce production exp -> BREAK 
-- On GT reduce production exp -> BREAK 
-- On GE reduce production exp -> BREAK 
-- On FUNCTION reduce production exp -> BREAK 
-- On EQ reduce production exp -> BREAK 
-- On EOF reduce production exp -> BREAK 
-- On END reduce production exp -> BREAK 
-- On ELSE reduce production exp -> BREAK 
-- On DO reduce production exp -> BREAK 
-- On DIV reduce production exp -> BREAK 
-- On COMMA reduce production exp -> BREAK 
-- On AND reduce production exp -> BREAK 

State 17:
exp -> var . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> var . ASSIGN exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On ASSIGN shift to state 18
-- On VAR reduce production exp -> var 
-- On TYPE reduce production exp -> var 
-- On TIMES reduce production exp -> var 
-- On THEN reduce production exp -> var 
-- On SEMI reduce production exp -> var 
-- On RPAREN reduce production exp -> var 
-- On POW reduce production exp -> var 
-- On PLUS reduce production exp -> var 
-- On OR reduce production exp -> var 
-- On NE reduce production exp -> var 
-- On MOD reduce production exp -> var 
-- On MINUS reduce production exp -> var 
-- On LT reduce production exp -> var 
-- On LE reduce production exp -> var 
-- On IN reduce production exp -> var 
-- On GT reduce production exp -> var 
-- On GE reduce production exp -> var 
-- On FUNCTION reduce production exp -> var 
-- On EQ reduce production exp -> var 
-- On EOF reduce production exp -> var 
-- On END reduce production exp -> var 
-- On ELSE reduce production exp -> var 
-- On DO reduce production exp -> var 
-- On DIV reduce production exp -> var 
-- On COMMA reduce production exp -> var 
-- On AND reduce production exp -> var 

State 18:
exp -> var ASSIGN . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 19

State 19:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> var ASSIGN exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On TIMES shift to state 20
-- On POW shift to state 22
-- On PLUS shift to state 24
-- On OR shift to state 30
-- On NE shift to state 32
-- On MOD shift to state 26
-- On MINUS shift to state 34
-- On LT shift to state 36
-- On LE shift to state 38
-- On GT shift to state 40
-- On GE shift to state 42
-- On EQ shift to state 44
-- On DIV shift to state 28
-- On AND shift to state 46
-- On VAR reduce production exp -> var ASSIGN exp 
-- On TYPE reduce production exp -> var ASSIGN exp 
-- On THEN reduce production exp -> var ASSIGN exp 
-- On SEMI reduce production exp -> var ASSIGN exp 
-- On RPAREN reduce production exp -> var ASSIGN exp 
-- On IN reduce production exp -> var ASSIGN exp 
-- On FUNCTION reduce production exp -> var ASSIGN exp 
-- On EOF reduce production exp -> var ASSIGN exp 
-- On END reduce production exp -> var ASSIGN exp 
-- On ELSE reduce production exp -> var ASSIGN exp 
-- On DO reduce production exp -> var ASSIGN exp 
-- On COMMA reduce production exp -> var ASSIGN exp 

State 20:
exp -> exp TIMES . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 21

State 21:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp TIMES exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On POW shift to state 22
-- On VAR reduce production exp -> exp TIMES exp 
-- On TYPE reduce production exp -> exp TIMES exp 
-- On TIMES reduce production exp -> exp TIMES exp 
-- On THEN reduce production exp -> exp TIMES exp 
-- On SEMI reduce production exp -> exp TIMES exp 
-- On RPAREN reduce production exp -> exp TIMES exp 
-- On PLUS reduce production exp -> exp TIMES exp 
-- On OR reduce production exp -> exp TIMES exp 
-- On NE reduce production exp -> exp TIMES exp 
-- On MOD reduce production exp -> exp TIMES exp 
-- On MINUS reduce production exp -> exp TIMES exp 
-- On LT reduce production exp -> exp TIMES exp 
-- On LE reduce production exp -> exp TIMES exp 
-- On IN reduce production exp -> exp TIMES exp 
-- On GT reduce production exp -> exp TIMES exp 
-- On GE reduce production exp -> exp TIMES exp 
-- On FUNCTION reduce production exp -> exp TIMES exp 
-- On EQ reduce production exp -> exp TIMES exp 
-- On EOF reduce production exp -> exp TIMES exp 
-- On END reduce production exp -> exp TIMES exp 
-- On ELSE reduce production exp -> exp TIMES exp 
-- On DO reduce production exp -> exp TIMES exp 
-- On DIV reduce production exp -> exp TIMES exp 
-- On COMMA reduce production exp -> exp TIMES exp 
-- On AND reduce production exp -> exp TIMES exp 

State 22:
exp -> exp POW . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 23

State 23:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp POW exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On POW shift to state 22
-- On VAR reduce production exp -> exp POW exp 
-- On TYPE reduce production exp -> exp POW exp 
-- On TIMES reduce production exp -> exp POW exp 
-- On THEN reduce production exp -> exp POW exp 
-- On SEMI reduce production exp -> exp POW exp 
-- On RPAREN reduce production exp -> exp POW exp 
-- On PLUS reduce production exp -> exp POW exp 
-- On OR reduce production exp -> exp POW exp 
-- On NE reduce production exp -> exp POW exp 
-- On MOD reduce production exp -> exp POW exp 
-- On MINUS reduce production exp -> exp POW exp 
-- On LT reduce production exp -> exp POW exp 
-- On LE reduce production exp -> exp POW exp 
-- On IN reduce production exp -> exp POW exp 
-- On GT reduce production exp -> exp POW exp 
-- On GE reduce production exp -> exp POW exp 
-- On FUNCTION reduce production exp -> exp POW exp 
-- On EQ reduce production exp -> exp POW exp 
-- On EOF reduce production exp -> exp POW exp 
-- On END reduce production exp -> exp POW exp 
-- On ELSE reduce production exp -> exp POW exp 
-- On DO reduce production exp -> exp POW exp 
-- On DIV reduce production exp -> exp POW exp 
-- On COMMA reduce production exp -> exp POW exp 
-- On AND reduce production exp -> exp POW exp 

State 24:
exp -> exp PLUS . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF END ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On REAL shift to state 3
-- On LPAREN shift to state 4
-- On LOGIC shift to state 5
-- On LET shift to state 6
-- On INTEGER shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On BREAK shift to state 16
-- On var shift to state 17
-- On exp shift to state 25
